# gauthenticator

./: CHANGES  Makefile.am  README.md  TODO  configure.ac
applications/: gauthenticator.desktop
man/: gauthenticator.1
src/: gauthenticator.c  gauthenticator.h
